--- a/frontend/dogapp/src/app/components/card-dog/card-dog.html
+++ b/frontend/dogapp/src/app/components/card-dog/card-dog.html
@@ -1,27 +1,22 @@
-<article>
-    <div class="mb-4 p-8 flex items-center justify-center">
-        <p-card [style]="{ width: '20rem', overflow: 'hidden' }">
-            <ng-template #header>
-                <img alt="Card" src="{{dog.image?.url}}" />
-            </ng-template>
-            <ng-template #title> {{dog.name}} </ng-template>
-            <ng-template #subtitle> {{dog.bred_for}} </ng-template>
+<p-card [style]="{ width: '20rem', overflow: 'hidden' }">
+    <ng-template #header>
+        <img alt="Card" src="{{dog.image?.url}}" class="dog-img" />
+    </ng-template>
+    <ng-template #title> {{dog.name}} </ng-template>
+    <ng-template #subtitle> {{dog.bred_for}} </ng-template>
 
-            <p-chip label="Action" />
+    <p-chip label="Action" />
 
-            <ng-template #footer>
-                <div class="flex gap-4 mt-1">
-                    <div>
-                        <img src="assets/pais.png" alt="">
-                        <p>País</p>
-                    </div>
-                    <div>
-                        <img src="assets/reloj.png" alt="">
-                        <p>10 - 12</p>
-                    </div>
-                </div>
-            </ng-template>
-        </p-card>
-    </div>
-
-</article>
+    <ng-template #footer id="templateFooter">
+        <div class="templateFooter-div">
+            <div>
+                <img src="assets/reloj.png" class="img-origin-life" alt="life span">
+                <p>{{dog.life_span}}</p>
+            </div>
+            <div>
+                <img src="assets/pais.png" class="img-origin-life" alt="origin">
+                @if (dog.origin) { <p>{{dog.origin}}</p> } @else {<p>-</p>}
+            </div>
+        </div>
+    </ng-template>
+</p-card>
