--- a/frontend/dogapp/src/app/pages/inicio/inicio.html
+++ b/frontend/dogapp/src/app/pages/inicio/inicio.html
@@ -26,7 +26,7 @@
 
 
     <!-- Section cards -->
-    <section id="section-cards">
+    <section id="sectionCards">
         <div>
             <h3>1000 razas encontradas</h3>
             <a href="#">Ver más</a>
