--- a/frontend/dogapp/src/styles.css
+++ b/frontend/dogapp/src/styles.css
@@ -9,10 +9,18 @@
 
     --n50: #FFF9EB;
     --n100: #FFD5B8;
+    --n200: #FFEDD4;
+    --n300: #EC9922;
     --n500: #FF8D08;
+    --n800: #CD3500;
 
     --g50: #EDE7DC;
+    --g100: #F3F4F6;
+    --g400: #475569;
     --g500: #4A5565;
+    --g600: #474747;
+    --g700: #3B3B3B;
+    --n900: #0A0A0A;
 }
 
 
