--- a/frontend/dogapp/src/app/components/card-dog/card-dog.css
+++ b/frontend/dogapp/src/app/components/card-dog/card-dog.css
@@ -1,9 +1,11 @@
 ::ng-deep p-card {
-    /* background-color: red !important; */
+    width: 20rem !important;
+    height: 33rem !important;
+    overflow: hidden !important;
     border-radius: 12px !important;
     border: 0px !important;
-    outline: none !important;
     box-shadow: 0px 2px 2px 1px var(--g50) !important;
+    justify-content: space-between !important;
 }
 
 ::ng-deep p-card:hover {
@@ -12,9 +14,23 @@
     transition: 0.3s !important;
 }
 
+::ng-deep p-chip {
+    background-color: var(--g100) !important;
+    font-size: 12px;
+    color: var(--g500) !important;
+    padding: 4px 10px !important;
+    margin: 0 2px 10px 0;
+    border-radius: 6px !important;
+}
+
+#template-title{
+    padding-top: -5rem !important;
+
+}
+
 .dog-img {
     width: 100%;
-    height: 100%;
+    aspect-ratio: 4/3;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
 }
@@ -32,10 +48,11 @@
 
 .templateFooter-div div p {
     margin: 0 0 0px 10px;
+    font-size: 14px;
 }
 
 .img-origin-life {
-    width: 20px;
+    width: 16px;
 }
 
 
