--- a/frontend/dog/src/app/shared/header/header.html
+++ b/frontend/dog/src/app/shared/header/header.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<header>
+    <p-menubar [model]="items">
+        <ng-template #start>
+            <svg width="33" height="35" viewBox="0 0 33 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="..." fill="var(--primary-color)" />
+            </svg>
+        </ng-template>
+        <ng-template #item let-item let-root="root">
+            <a pRipple class="flex items-center px-4 py-3 cursor-pointer gap-2">
+                <span>{{ item.label }}</span>
+                <p-badge *ngIf="item.badge" [ngClass]="{ 'ms-auto': !root }" [value]="item.badge" />
+                <span *ngIf="item.shortcut"
+                    class="ms-auto border border-surface rounded bg-emphasis text-muted-color text-xs p-1">{{
+                    item.shortcut }}</span>
+                <i *ngIf="item.items" [ngClass]="['ms-auto pi', root ? 'pi-angle-down' : 'pi-angle-right']"></i>
+            </a>
+        </ng-template>
+    </p-menubar>
+</header>
