--- a/frontend/dog/src/app/pages/razas/razas.html
+++ b/frontend/dog/src/app/pages/razas/razas.html
@@ -12,14 +12,21 @@
                 </p>
             </div>
 
+            @if (!cargando) {
             <div class="cards-container">
                 @for (raza of razasPaginadas(); track $index) {
                 <app-card-dog [dog]="raza"></app-card-dog>
                 }
             </div>
+            } @else {
+            <app-spinner></app-spinner>
+            }
         </div>
 
+        @if (!cargando) {
         <p-paginator (onPageChange)="onPageChange($event)" [first]="first" [rows]="rows"
             [totalRecords]="arrAllRazas.length" [showCurrentPageReport]="true" />
+        }
+
     </section>
 </main>
