--- a/frontend/dog/src/app/pages/inicio/inicio.html
+++ b/frontend/dog/src/app/pages/inicio/inicio.html
@@ -24,8 +24,8 @@
         </div>
     </section>
 
-
     <!-- Section cards -->
+    @if (!cargando) {
     <section id="sectionCards">
         <div>
             <a routerLink="razas">Descubrir más
@@ -40,7 +40,9 @@
             }
         </div>
         }
-
     </section>
 
+    } @else {
+    <app-spinner></app-spinner>
+    }
 </main>
