Modal detalle dog

--- a/frontend/dog/src/app/components/card-dog/card-dog.html
+++ b/frontend/dog/src/app/components/card-dog/card-dog.html
@@ -1,4 +1,4 @@
-<p-card>
+<p-card (click)="openDialog()">
     <ng-template #header>
         <img alt="Card" src="{{dog.image?.url}}" class="dog-img" />
     </ng-template>
