--- a/frontend/dog/src/app/pages/razas/razas.css
+++ b/frontend/dog/src/app/pages/razas/razas.css
@@ -1,3 +1,7 @@
+.margin-header {
+    margin: 2.5rem;
+}
+
 #paginatorRazas {
     display: flex;
     flex-direction: column;
@@ -19,3 +23,16 @@
     background-color: transparent !important;
 }
 
+#div-title {
+    width: 100%;
+    display: flex;
+    flex-direction: column !important;
+}
+
+#div-title p:first-of-type {
+    font-size: 20px;
+}
+
+#div-title p {
+    margin: 0;
+}
