--- a/frontend/dog/src/app/pages/inicio/inicio.html
+++ b/frontend/dog/src/app/pages/inicio/inicio.html
@@ -41,7 +41,7 @@
         </div>
 
         @if (selectedRaza) {
-        <app-detalle-dog [razaResponse]="selectedRaza" [(visible)]="dialogVisible"></app-detalle-dog>
+        <app-detalle-dog [nombre]="selectedRaza" [(visible)]="dialogVisible"></app-detalle-dog>
         }
         }
     </section>
