--- a/frontend/dog/src/styles.css
+++ b/frontend/dog/src/styles.css
@@ -55,3 +55,20 @@ div {
     margin-top: 8rem;
 }
 
+
+
+
+
+/* @media (min-width: 576px) {}
+
+
+@media (min-width: 768px) {}
+
+
+@media (min-width: 992px) {}
+
+
+@media (min-width: 1200px) {}
+
+
+@media (min-width: 1400px) {} */
