--- a/frontend/dog/src/styles.css
+++ b/frontend/dog/src/styles.css
@@ -22,6 +22,18 @@
     --g600: #474747;
     --g700: #3B3B3B;
     --g900: #0A0A0A;
+
+    --v50: #F0FDF4;
+    --v100: #7DF1A9;
+    --v200: #00A63E;
+    --v300: #008236;
+    --v400: #0D542B;
+
+    --r50: #FEF2F2;
+    --r100: #FFA3A3;
+    --r200: #EA1E28;
+    --r300: #C10007;
+    --r400: #82181A;
 }
 
 
